# agentplane-mcp-wrapper

./: README.md  pyproject.toml
examples/: agentplane.tech.toml
src/agentplane_mcp_wrapper/: app.py  auto_login.py  config.py  domain.py  gateway_client.py  oidc.py  pkce.py  server.py  token_cache.py
tests/: test_config.py
